--- a/package.json
+++ b/package.json
@@ -22,5 +22,20 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0"
+  },
+  "scripts": {
+    "clean": "yarn hardhat clean",
+    "compile": "yarn hardhat compile",
+    "deploy": "yarn hardhat deploy",
+    "deploy:sepolia": "yarn hardhat deploy --network sepolia",
+    "test": "yarn hardhat test",
+    "test:sepolia": "yarn hardhat test --network sepolia",
+    "coverage": "yarn hardhat coverage",
+    "lint": "yarn lint:sol && yarn prettier:check",
+    "lint:sol": "yarn solhint \"contracts/**/*.sol\"",
+    "lint:sol:max-warnings": "yarn solhint --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint:sol:fix": "yarn solhint \"contracts/**/*.sol\" --fix",
+    "prettier:check": "yarn prettier --check \"**/*.{js,json,md,sol,ts,yml}\"",
+    "prettier:write": "yarn prettier --write \"**/*.{js,json,md,sol,ts,yml}\""
   }
 }
