--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "chai": "^4.2.0",
     "ethers": "^6.4.0",
     "hardhat": "^2.14.0",
+    "hardhat-deploy": "^0.11.44",
+    "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-solidity": "^1.2.0",
+    "solhint": "^4.0.0",
+    "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
