--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "1.0.0",
 	"license": "MIT",
 	"devDependencies": {
+		"@chainlink/contracts": "^0.8.0",
 		"@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
 		"@nomicfoundation/hardhat-ethers": "^3.0.0",
 		"@nomicfoundation/hardhat-network-helpers": "^1.0.0",
