fixed solidity compiler error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 	},
 	"include": [
 		"./hardhat.config.ts",
-		"helper-hardhat.config.ts",
+		"helper-config.ts",
 		"./scripts",
 		"./deploy",
 		"deploy",
